--- a/front-end-app/src/App.css
+++ b/front-end-app/src/App.css
@@ -40,6 +40,7 @@ div {
 .CustomerAddUpdateForm {
   flex: 1;
   /* Both columns will take up equal space */
+
 }
 
 /* Table Styling */
@@ -49,7 +50,6 @@ table {
   margin-bottom: 20px;
   border: 1px solid #e2e2e2;
   border-radius: 5px;
-  overflow: hidden;
 }
 
 th,
@@ -155,4 +155,14 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+}
+
+/* Search Input Styling */
+.search-input {
+  width: 90%;
+  padding: 8px;
+  border: 1px solid #d1d1d1;
+  border-radius: 4px;
+  box-shadow: inset 0px 1px 2px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease;
 }
